<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cazr.hourglass.settings"
    android:padding="0dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_page"
        android:id="@+id/header"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:background="@color/ColorPrimary"
        android:textSize="20dp"
        android:textColor="#000000" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:layout_below="@+id/header"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_name"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_name_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/workout_friend"
            android:hint="@string/workout_friend_name_hint"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/workout_friend_number"
            android:layout_gravity="center_horizontal"
            android:hint="@string/phone_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/current_weight"
            android:layout_gravity="center_horizontal"
            android:hint="@string/current_weight"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/goal_weight"
            android:layout_gravity="center_horizontal"
            android:hint="@string/gaol_weight" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_to_reach_goal"
            android:layout_gravity="center_horizontal"
            android:hint="@string/date_to_reach_goal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/save"
                android:id="@+id/save_text"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="25dp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                android:layout_weight="1">

                <ImageButton
                    android:layout_margin="15dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/circle"
                    android:id="@+id/upload"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:onClick="save_data" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/animate_this"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_signal_1" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/data"
                android:id="@+id/data_text"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="25dp" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/button"
            android:onClick="reset_all" />

    </LinearLayout>

</RelativeLayout>
